# simple_vocals

./: CMakeLists.txt  LICENSE  README.md  README.txt  build.bat  build.sh  macrun.sh  run.sh
Source/: EffectChain.cpp  EffectChain.h  EffectModule.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/Modules/: AutotuneModule.cpp  AutotuneModule.h  CompressorModule.cpp  CompressorModule.h  DeEsserModule.cpp  DeEsserModule.h  DelayModule.cpp  DelayModule.h  EQModule.cpp  EQModule.h  HarmonizerModule.cpp  HarmonizerModule.h  NoiseReductionModule.cpp  NoiseReductionModule.h  ReverbModule.cpp  ReverbModule.h  SaturationModule.cpp  SaturationModule.h
Source/UI/: AutoChainButton.cpp  AutoChainButton.h  AutotuneComponent.cpp  AutotuneComponent.h  ChainStrip.cpp  ChainStrip.h  CompressorPanel.cpp  CompressorPanel.h  DeEsserPanel.cpp  DeEsserPanel.h  DelayPanel.cpp  DelayPanel.h  DenoiseBar.cpp  DenoiseBar.h  EQControlsStrip.cpp  EQControlsStrip.h  EQCurveComponent.cpp  EQCurveComponent.h  HarmonizerPanel.cpp  HarmonizerPanel.h  ModulePanel.h  PlaceholderPanel.h  PresetBar.cpp  PresetBar.h  ReverbPanel.cpp  ReverbPanel.h  SaturationPanel.cpp  SaturationPanel.h
